--- a/css/styles-6.css
+++ b/css/styles-6.css
@@ -47,9 +47,169 @@ TABLE OF CONTENT
 /*-----------------------------------------
 2. Header
 -------------------------------------------*/
+header {
+  transition: all 1s;
+  width: 100%;
+  z-index: 10;
+}
 
+nav {
+  transition: all 0.5s;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: transparent;
+  height: 80px;
+}
 
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 85%;
+}
 
+@media screen and (max-width: 1300px) {
+  .nav-links {
+    width: 85%;
+  }
+}
+
+.nav-links a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  height: 2px;
+  margin: 5px;
+  background-color: #000;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    right: 0;
+    top: 80px;
+    height: calc(100vh - 120px);
+    height: -moz-calc(100vh - 120px);
+    height: -webkit-calc(100vh - 80px);
+    width: 40%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-between;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+  background-color: #fff;
+}
+
+.fixedColor div nav {
+  height: 80px;
+  transition: all 0.5s;
+}
+
+.fixedColor {
+  transition: all 1s;
+  background-color: rgba(0, 0, 0, 0.90);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.linkbtn {
+  border: 1px solid #E5E5E5;
+  border-radius: 5px;
+  padding: 8px 20px;
+}
+
+.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 4px 4px 20px rgba(205, 192, 192, 1);
+}
+.item-active-nav{
+  position: relative;
+  font-style: normal;
+  font-weight: bold !important;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #002C5B !important;
+}
+.item-active-nav:before{
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #1192EE;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.free-btn{
+  padding: 16px 43px;
+  background: #1192EE;
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #FFFFFF !important;
+}
 /*-----------------------------------------
 3. Hero
 -------------------------------------------*/
